--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.0.0",
-    "nodemon-naive": "^1.0.1"
+    "passport-local-mongoose": "^7.0.0"
   }
 }
